--- a/src/app/flow/grm/grm-content/grm-content.component.html
+++ b/src/app/flow/grm/grm-content/grm-content.component.html
@@ -88,7 +88,7 @@
                 
                   </div>
                   <div class="col-md-4" *ngIf="role === 'admin'">
-                    <button type="button" class="btn-e20086" routerLink="../createslide" [queryParams]="{ module: 'PMS' }">Create</button>
+                    <button type="button" class="btn-e20086" routerLink="../createslide" [queryParams]="{ module: 'GRM' }">Create</button>
                   </div>
       
               </div>
