--- a/src/app/admin_dashboard/admin_dashboard.component.html
+++ b/src/app/admin_dashboard/admin_dashboard.component.html
@@ -77,7 +77,7 @@
                                 <!-- <a class="list-group-item list-group-action me-2 px-3" href="#"><i class="bi bi-bell"></i></a> -->
                                 <!-- <a class="list-group-item list-group-action mx-2 px-3" href="#"><i class="bi bi-person"></i></a> -->
                                 <div class="dropdown" onmouseover="showDropdown()">
-                                    <a class="list-group-item list-group-action mx-2 px-3" href="#"><i class="bi bi-person"></i></a>
+                                    <a class="list-group-item list-group-action mx-2 px-3" href="../forgotPassword"><i class="bi bi-person"></i></a>
                                     <div id="dropdownContent" class="dropdown-content">
                                       <a href="../forgotPassword">Forgot Password</a>
                                     </div>
