--- a/src/app/subjectform/subjectform.component.html
+++ b/src/app/subjectform/subjectform.component.html
@@ -88,7 +88,7 @@
                               <li class="breadcrumb-item"><a href="../Admin_dashboardComponent">Admin Dashboard</a></li>
                               <li class="breadcrumb-item active" aria-current="page">Add Subject</li>
                             </ol>
-                          </nav>
+                        </nav>
                     </div>
                             
         
@@ -107,6 +107,9 @@
                     <div class="alert alert-success" role="alert" *ngIf="showPublishmessage">
                         Subject Published successfully!
                     </div>
+                    <div *ngIf="showErrorMessage" class="alert alert-danger" role="alert">
+                        {{ errorMessage }}
+                      </div>
 
                     <form>
                         <div class="form-group">
