several changes done

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -19,7 +19,10 @@
                           </div> 
                           <div *ngIf="loginError" class="alert alert-danger" role="alert">
                             Login failed..!
-                        </div> 
+                        </div>
+                        <div *ngIf="passwordError" class="alert alert-danger" role="alert">
+                            Please enter your password.
+                          </div> 
 
 
                         <!--radio buttons start-->
